name:                 haskell-utils
version:              0.1.0.0
synopsis:             Some usefull stuff for daily haskell hacking.
license:              GPL-2
license-file:         LICENSE
author:               Daniel Priebe
maintainer:           code@nospam.syn-com.de
copyright:            Daniel Priebe
category:             Utils
build-type:           Simple
cabal-version:        >= 1.8

source-repository head
  type:               git
  location:           https://github.com/uglyhack/haskell-utils.git
  subdir:             src

library
  exposed-modules:    System.Directory.Utils
                 ,    Data.Function.Predicate
                 ,    Data.Either.Utils
                 ,    Data.Maybe.Utils
                 ,    Control.Exception.Utils
  build-depends:      base >= 4.6
               ,      directory >= 1.2
               ,      filepath >= 1.3
               ,      mtl >= 2.1
  hs-source-dirs:     src
